--- a/avengers.html
+++ b/avengers.html
@@ -58,7 +58,7 @@
             <article>
                 <h4>2000</h4>
                 <p>
-                    Los Vengadores recibieron la autoridad internacional de las Naciones Unidas. Los miembros que se unieron durante ese período incluyeron Jack de Corazones y el segundo Ant-Man. Un nuevo Capitán Bretaña fue agregado al equipo. La historia de "Vengadores Desunidos" siguió. Titulado Chaos, la historia presentaba la muerte de algunos miembros y la pérdida de credibilidad del equipo. Se revela que la culpable es la Bruja Escarlata, que se había vuelto loca después de agonizar por el recuerdo de sus hijos perdidos y que posteriormente perdió el control de sus poderes que alteran la realidad. Con el equipo en desorden y la mansión de los vengadores arruinada, los miembros sobrevivientes acordaron disolverse.
+                    Los Vengadores recibieron la autoridad internacional de las Naciones Unidas. Los miembros que se unieron durante ese período incluyeron Jack de Corazones y el segundo Ant-Man. Un nuevo Capitán Bretaña fue agregado al equipo. La historia de "Vengadores Desunidos" siguió. Titulado Chaos, la historisa presentaba la muerte de algunos miembros y la pérdida de credibilidad del equipo. Se revela que la culpable es la Bruja Escarlata, que se había vuelto loca después de agonizar por el recuerdo de sus hijos perdidos y que posteriormente perdió el control de sus poderes que alteran la realidad. Con el equipo en desorden y la mansión de los vengadores arruinada, los miembros sobrevivientes acordaron disolverse.
                 </p>
             </article>
             <article>
