--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h2>Ejemplo</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iure repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum.</p>
     <h3>Harry la piedra</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora at suscipit perferendis eveniet nulla illo praesentium nihil nemo labore quas doloribus fuga architecto nostrum, delectus tempore eum excepturi, animi sed!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora at suscipit perferendis eveniet nulla illo praesentium nihil nemo slabore quas doloribus fuga architecto nostrum, delectus tempore eum excepturi, animi sed!</p>
 
 </body>
 
