--- a/seccion-de-contenido.html
+++ b/seccion-de-contenido.html
@@ -29,7 +29,7 @@
         
         <h1>Ejemplo de title</h1>
         <h2>Otro ejemplo</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos reiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam gquos reiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?</p>
         <h2>Ejemplo</h2>
           <p>Lorem ipsum dolor sit amets consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iure repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum.</p>
           <h3>Harry la piedra</h3>
