--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
    <h2>Otro ejemplo</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos reiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?</p>
     <h2>Ejemplo</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iure repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum.</p>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iurej repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum.</p>
     <h3>Harry la piedra</h3>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora at suscipit perferendis eveniet nulla illo praesentium nihil nemo slabore quas doloribus fuga architecto nostrum, delectus tempore eum excepturi, animi sed!</p>
 
