--- a/html/identificadores.html
+++ b/html/identificadores.html
@@ -24,6 +24,10 @@
 
             
         </p>
+        <div>
+            <a href="../index.html">Volver a incio</a>
+        </div>
+        
     </section>
 </main>
 
