--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iurej repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum.</p>
     <h3>Harry la piedra</h3>
     <p>Lorem ipsum dolor sit amet, consectetur fwefadipisicing elit. Tempora at suscipit perferendwefewfweis eveniet nulla illo praesentium nihil nemo slabore quals doloribus fuga architecto nostrum, delectus tempore eum excepturi, animi sed!</p>
+    <section>
+        <h3>Enlaces</h3>
+        <div>
+            <h3>Rutas</h3>
+            <p>
+                Haga click en el siguiente enlace: <a href="html/avengers.html">avengers</a><br>
+                Haga click en el siguiente enlace: <a href="html/identificadores.html">Identificadores</a><br>
+                Haga click en el siguiente enlace: <a href="html/seccion-de-contenido.html">seccion de contenido</a>
+            </p>
+        </div>
+    </section>
 
 </body>
 
