--- a/html/seccion-de-contenido.html
+++ b/html/seccion-de-contenido.html
@@ -62,6 +62,10 @@
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam excepturi quidem inventore officiis eaque numquam reprehenderit unde molestias, officia neque at saepe voluptas reiciendis eum, enim, doloribus porro ipsam dicta.</p>
               </section>
           </article>    
+          <div>
+            <a href="../index.html">Volver a incio</a>
+        </div>
+        
         </main>
         <footer>
          pie de pagina
