--- a/html/seccion-de-contenido.html
+++ b/html/seccion-de-contenido.html
@@ -63,7 +63,9 @@
               </section>
           </article>    
           <div>
-            <a href="../index.html">Volver a incio</a>
+            <a href="../index.html">Volver a incio</a><br>
+            <a href="https://www.google.com/" target="_blank">google</a>
+            <!-- El atributo target="_blank es para abrir una pestaña externa a la de mi pagina"-->
         </div>
         
         </main>
