--- a/index.html
+++ b/index.html
@@ -27,9 +27,20 @@
         <div>
             <h3>Rutas</h3>
             <p>
+             
+                <!-- para drigir a un punto especifico se estbalece un id en el elemento, y en la ruta se agg # y el id, en este caso (#tabla-1)-->
+                <a href="html/avengers.html#tabla-1">Tabla 1</a><br>
                 Haga click en el siguiente enlace: <a href="html/avengers.html">avengers</a><br>
                 Haga click en el siguiente enlace: <a href="html/identificadores.html">Identificadores</a><br>
-                Haga click en el siguiente enlace: <a href="html/seccion-de-contenido.html">seccion de contenido</a>
+                Haga click en el siguiente enlace: <a href="html/seccion-de-contenido.html">seccion de contenido</a><br>
+                Haga click en el siguiente enlace: <a href="imagenes/gato.jpg" download>descargar gato</a>
+            </p>
+        </div>
+        <div>
+            <h3>Video de auron</h3>
+            <p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3I1ssfR3FRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    
             </p>
         </div>
     </section>
