--- a/html/seccion-de-contenido.html
+++ b/html/seccion-de-contenido.html
@@ -46,7 +46,7 @@
                   <h3>Noticia 2</h3>
                   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores asperiores quia minima nulla ducimus atque repudiandae voluptatem similique voluptatibus blanditiis, dolorum voluptate deleniti reprehenderit aliquid? Ad, expedita voluptas! Odit, quas!</p>
               </article>
-              <article>
+              <article id="noticia-3">
                   <h3>Noticia 3</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente natus ab libero magni nobis debitis est nam fugit suscipit reprehenderit ullam, deleniti beatae voluptas impedit voluptates praesentium expedita vero recusandae.</p>
               </article>
