--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
              
                 <!-- para drigir a un punto especifico se estbalece un id en el elemento, y en la ruta se agg # y el id, en este caso (#tabla-1)-->
                 <a href="html/avengers.html#tabla-1">Tabla 1</a><br>
+                <a href="html/seccion-de-contenido.html#noticia-3">Noticia 3</a><br>
                 Haga click en el siguiente enlace: <a href="html/avengers.html">avengers</a><br>
                 Haga click en el siguiente enlace: <a href="html/identificadores.html">Identificadores</a><br>
                 Haga click en el siguiente enlace: <a href="html/seccion-de-contenido.html">seccion de contenido</a><br>
