--- a/index.html
+++ b/index.html
@@ -34,15 +34,17 @@
                 Haga click en el siguiente enlace: <a href="html/avengers.html">avengers</a><br>
                 Haga click en el siguiente enlace: <a href="html/identificadores.html">Identificadores</a><br>
                 Haga click en el siguiente enlace: <a href="html/seccion-de-contenido.html">seccion de contenido</a><br>
-                Haga click en el siguiente enlace: <a href="imagenes/gato.jpg" download>descargar gato</a>
+                Haga click en el siguiente enlace: <a href="imagenes/gato.jpg" download>descargar gato</a><br>
+                Haga click para poder ver el horario de clases<a href="html/horario-clases.html#horario">Horario de clases</a>
             </p>
         </div>
-        <div>
+
             <h3>Video de auron</h3>
             <p>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/3I1ssfR3FRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     
-            </p>
+            </p><br>
+            <a href="" download>Descargar Video</a>
         </div>
     </section>
 
