--- a/html/horario-clases.html
+++ b/html/horario-clases.html
@@ -133,11 +133,8 @@
                 </tr>
                 <tr>
                     <td>9:30-10:25</td>
-                    <td>kmcomod</td>
-                    <td>Mcccscsdcsd</td>
-                    <td>cdcsdcdscds</td>
-                    <td>lkmcsdcmd</td>
-                    <td>sdmocmdsc</td>
+                    <td>Recreo</td>
+                   
                 </tr>
                 <tr>
                     <td>9:30-10:25</td>
@@ -154,9 +151,22 @@
                     <td>cdcsdcdscds</td>
                     <td>lkmcsdcmd</td>
                     <td>sdmocmdsc</td>
+                </tr>
+                <tr>
+                    <td>9:30-10:25</td>
+                    <td>kmcomod</td>
+                    <td>Mcccscsdcsd</td>
+                    <td>cdcsdcdscds</td>
+                    <td>lkmcsdcmd</td>
+                    <td>sdmocmdsc</td>
+                </tr>
+                <tr>
+                    <td colspan="5">Total de asignaturas</td>
+                    <td>12</td>
                 </tr>
 
             </table>
+          
         </section>
     </main>
     <footer>
