--- a/html/seccion-de-contenido.html
+++ b/html/seccion-de-contenido.html
@@ -9,6 +9,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba Web</title>
+    <link rel="shortcut icon" href="/imagenes/gato.jpg" type="image/x-icon">
 
 </head>
 
