--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Representa el contenido de nuestra pagina web-->
    <h1>Ejemplo de title</h1>
    <h2>Otro ejemplo</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos reiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos rewiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?</p>
     <h2>Ejemplo</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iurej repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum.</p>
     <h3>Harry la piedra</h3>
