--- a/html/seccion-de-contenido.html
+++ b/html/seccion-de-contenido.html
@@ -68,7 +68,18 @@
             <a href="https://www.google.com/" target="_blank">google</a>
             <!-- El atributo target="_blank es para abrir una pestaña externa a la de mi pagina"-->
         </div>
-        
+
+        <!-- Utilizamos audio y al atributo controls-->
+        <audio src="">
+
+        </audio>
+
+         <!-- Utilizamos video y al atributo controls, poste-->
+
+        <video src="">
+
+        </video>
+
         </main>
         <footer>
          pie de pagina
