--- a/html/formulario.html
+++ b/html/formulario.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
-    <link rel="shortcut icon" href="/imagenes/gato.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/gato.jpg" type="image/x-icon">
 </head>
 <body>
 <style>
@@ -27,7 +27,7 @@
 
         </form>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum corrupti voluptatibus fugit fuga voluptatum qui est necessitatibus dicta? Sapiente beatae dolorum aut, dolorem cupiditate suscipit ducimus! Pariatur vero porro dolorem!</p>
-        <img id ="gato" src="/imagenes/gato.jpg" alt="Imagen de un gato">
+        <img id ="gato" src="../imagenes/gato.jpg" alt="Imagen de un gato">
     </main>
     <footer>
 
