--- a/html/seccion-de-contenido.html
+++ b/html/seccion-de-contenido.html
@@ -60,7 +60,7 @@
               </section>
               <section>
                   <h4>Sección 2</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aperiam excepturi quidem inventore officiis eaque numquam reprehenderit unde molestias, officia neque at saepe voluptas reiciendis eum, enim, doloribus porro ipsam dicta.</p>
+                  <p>Lorem ipsum wdolorwe sit ametw consectetdwdssdsffsdfgur, adipisicing elit. Aperiam excepturi quidem inventore officiis eaque numquam reprwwwehenderit unde molestias, officia neque at saepe voluptas reiciendis eum, enim, doloribus porro ipsam dicta.</p>
               </section>
           </article>    
           <div>
