--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba Web</title>
     <link rel="shortcut icon" href="/imagenes/gato.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 
