--- a/html/formulario.html
+++ b/html/formulario.html
@@ -26,7 +26,7 @@
             <button>Enviar fomulario</button>
 
         </form>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum corrupti voluptatibus fugit fuga voluptatum qui est necessitatibus dicta? Sapiente beatae dolorum aut, dolorem cupiditate suscipit ducimus! Pariatur vero porro dolorem!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum corrupti voluptatibus fugit fuga voluptawtum qui est necessitatibus dicta? Sapiente beatae dolorum aut, dolorem cupiditate suscipit ducimus! Pariatur vero porro dolorem!</p>
         <img id ="gato" src="../imagenes/gato.jpg" alt="Imagen de un gato">
     </main>
     <footer>
