--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
 <body>
 
     <!-- Representa el contenido de nuestra pagina web-->
-   <h1>Ejemplo de title</h1>
+   
    <div class="margen">
-    Chanchito de margen
+    <h1>Chanchito Margen</h1>
 </div>
-   <h2>Otro ejemplo</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos rewiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?</p>
-    <h2>Ejemplo</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iurej repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum.</p>
-    <h3>Harry la piedra</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur fwefadipisicing elit. Tempora at suscipit perferendwefewfweis eveniet nulla illo praesentium nihil nemo slabore quals doloribus fuga architecto nostrum, delectus tempore eum excepturi, animi sed!</p>
+   <h2 class="title-1">Otro ejemplo</h2>
+    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos rewiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?, Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat dolorem ea asperiores in sint mollitia, praesentium optio! Tempora, ullam facilis maiores dignissimos laborum, consectetur incidunt repellat sequi est tenetur magnam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet corrupti saepe consectetur eligendi, tempore molestiae magnam ex rem aut provident, ratione doloremque fugit id! Impedit laudantium doloribus doloremque ratione officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga dolorum perspiciatis odio recusandae eum, corporis mollitia quae. Quae impedit suscipit, nulla ipsum neque excepturi est dolores architecto maxime obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio sint quisquam corporis dolore, vel corrupti! Blanditiis facilis aliquam laboriosam similique delectus! Numquam accusamus rerum ipsam neque, magnam natus dolores eum.</p>
+    <h2 class="title-1">Ejemplo</h2>
+    <p class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod ipsum quam aspernatur, molestiae voluptates atque voluptatum aperiam iurej repellat sapiente sunt aut cum expedita recusandae quisquam, dignissimos quis officia harum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos rewiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?, Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat dolorem ea asperiores in sint mollitia, praesentium optio! Tempora, ullam facilis maiores dignissimos laborum, consectetur incidunt repellat sequi est tenetur magnam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet corrupti saepe consectetur eligendi, tempore molestiae magnam ex rem aut provident, ratione doloremque fugit id! Impedit laudantium doloribus doloremque ratione officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga dolorum perspiciatis odio recusandae eum, corporis mollitia quae. Quae impedit suscipit, nulla ipsum neque excepturi est dolores architecto maxime obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio sint quisquam corporis dolore, vel corrupti! Blanditiis facilis aliquam laboriosam similique delectus! Numquam accusamus rerum ipsam neque, magnam natus dolores eum.</p>
+    <h3 class="title-2">Harry la piedra</h3>
+    <p class="text">Lorem ipsum dolor sit amet, consectetur fwefadipisicing elit. Tempora at suscipit perferendwefewfweis eveniet nulla illo praesentium nihil nemo slabore quals doloribus fuga architecto nostrum, delectus tempore eum excepturi, animi sed! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Autem blanditiis ut architecto consequuntur omnis veniam quibusdam quos rewiciendis placeat ipsum tempora, dolores earum aliquid neque reprehenderit! Ut nemo sit a?, Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat dolorem ea asperiores in sint mollitia, praesentium optio! Tempora, ullam facilis maiores dignissimos laborum, consectetur incidunt repellat sequi est tenetur magnam? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet corrupti saepe consectetur eligendi, tempore molestiae magnam ex rem aut provident, ratione doloremque fugit id! Impedit laudantium doloribus doloremque ratione officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat fuga dolorum perspiciatis odio recusandae eum, corporis mollitia quae. Quae impedit suscipit, nulla ipsum neque excepturi est dolores architecto maxime obcaecati. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio sint quisquam corporis dolore, vel corrupti! Blanditiis facilis aliquam laboriosam similique delectus! Numquam accusamus rerum ipsam neque, magnam natus dolores eum.</p>
     <section>
-        <h3>Enlaces</h3>
+        <h3 class="title-2">Enlaces</h3>
         <div>
-            <h3>Rutas</h3>
+            <h3 class="title-2">Rutas</h3>
             <p>
              
                 <!-- para drigir a un punto especifico se estbalece un id en el elemento, y en la ruta se agg # y el id, en este caso (#tabla-1)-->
@@ -46,7 +46,7 @@
             </p>
         </div>
 
-            <h3>Video de auron</h3>
+            <h3 class="title-2">Video de auron</h3>
             <p id="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/3I1ssfR3FRU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     
