--- a/index.html
+++ b/index.html
@@ -57,7 +57,22 @@
             </P>
         </div>
     </section>
-  
+  <div class="table-1">
+      <table>
+          <tr>
+              <th>Nombre</th>
+              <th>Apellido</th>
+          </tr>
+          <tr>
+            <td>Chanchito</td>
+            <td>Feliz</td>
+        </tr>
+        <tr>
+            <td>Chanchito</td>
+            <td>Triste</td>
+        </tr>
+      </table>
+  </div>
 
 </body>
 
