--- a/index.html
+++ b/index.html
@@ -32,17 +32,20 @@
         <h3 class="title-2">Enlaces</h3>
         <div>
             <h3 class="title-2">Rutas</h3>
-            <p>
+            <p class="p-1">
              
                 <!-- para drigir a un punto especifico se estbalece un id en el elemento, y en la ruta se agg # y el id, en este caso (#tabla-1)-->
-                Click para el formulario <a href="html/formulario.html#formulario">Formulario</a><br>
-                <a href="html/avengers.html#tabla-1" target="_blank">Tabla 1</a><br>
-                <a href="html/seccion-de-contenido.html#noticia-3">Noticia 3</a><br>
-                Haga click en el siguiente enlace: <a href="html/avengers.html">avengers</a><br>
-                Haga click en el siguiente enlace: <a href="html/identificadores.html">Identificadores</a><br>
-                Haga click en el siguiente enlace: <a href="html/seccion-de-contenido.html">seccion de contenido</a><br>
-                Haga click en el siguiente enlace: <a href="imagenes/gato.jpg" download>descargar gato</a><br>
-                Haga click para poder ver el horario de clases<a href="html/horario-clases.html#horario">Horario de clases</a>
+                <ol class="lista">
+                    
+                    <li> Click para el formulario <a href="html/formulario.html#formulario">Formulario</a></li><br>
+                <li><a href="html/avengers.html#tabla-1" target="_blank">Tabla 1</a></li><br>
+                <li><a href="html/seccion-de-contenido.html#noticia-3">Noticia 3</a></li><br>
+               <li> Haga click en el siguiente enlace: <a href="html/avengers.html">avengers</a></li><br>
+               <li> Haga click en el siguiente enlace: <a href="html/identificadores.html">Identificadores</a></li><br>
+               <li> Haga click en el siguiente enlace: <a href="html/seccion-de-contenido.html">seccion de contenido</a></li><br>
+              <li>  Haga click en el siguiente enlace: <a href="imagenes/gato.jpg" download>descargar gato</a></li><br>
+              <li>  Haga click para poder ver el horario de clases<a href="html/horario-clases.html#horario">Horario de clases</a></li>
+            </ol>
             </p>
         </div>
 
@@ -73,7 +76,10 @@
         </tr>
       </table>
   </div>
-
+<footer class="footer-1">
+  <div class="izq">Duvan</div>
+  <div class="derech">UFPS</div>
+</footer>
 </body>
 
 </html>
