--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba Web</title>
-    <link rel="shortcut icon" href="/imagenes/gato.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagenes/gato.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
    <link rel="stylesheet" href="css/estilo2.css">
 
@@ -18,7 +18,22 @@
 <body>
 
     <!-- Representa el contenido de nuestra pagina web-->
-   
+   <header>
+       <div class="menu">
+        <img class="logo" src="../imagenes/cat-logo.jpg" alt="Logo">
+       <nav>
+        <ul>
+          <li><a href="html/avengers.html">Avengers</a></li>
+          <li><a href="html/formulario.html">Formulario</a></li>
+          <li><a href="html/horario-clases.html">Horario de clases</a></li>
+          <li><a href="html/identificadores.html">Identificadores</a></li>
+          <li><a href="html/seccion-de-contenido.html">Sección De Contenido</a></li>
+           </u>
+       </nav>
+    </div>
+   </header>
+
+
    <div class="margen">
     <h1>Chanchito Margen</h1>
 </div>
