--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Representa el contenido de nuestra pagina web-->
    <header>
        <div class="menu">
-        <img class="logo" src="../imagenes/cat-logo.jpg" alt="Logo">
+        <img class="logo" src="./imagenes/cat-logo.jpg" alt="Logo">
        <nav>
         <ul>
           <li><a href="html/avengers.html">Avengers</a></li>
